<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:id="@+id/editTextQtdTimes2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/max_time"
        android:inputType="number|textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/text"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <ListView
        android:id="@+id/listViewTimes2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditaCampeonato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdicionaTime2" />

    <Button
        android:id="@+id/buttonEditaCampeonato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/button"
        android:onClick="alterarCampeonato"
        android:text="@string/editar"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAdicionaTime2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/button"
        android:clickable="false"
        android:onClick="adicionaNovoTime"
        android:text="@string/adicionaTime"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/insira_quantidade_times"
        android:textColor="@color/text"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeCampeonato2"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCampeonato2" />

    <Button
        android:id="@+id/buttonAdicionaQtdTimes2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/button"
        android:onClick="quantidadeTimes"
        android:text="@string/ok"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextQtdTimes2"
        app:layout_constraintTop_toTopOf="@+id/editTextQtdTimes2" />

    <EditText
        android:id="@+id/editTextNomeCampeonato2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/adicioneNomeCampeonato"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>