<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <Button
        android:id="@+id/buttonAdicionaTime"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/button"
        android:clickable="false"
        android:onClick="adicionaNovoTime"
        android:text="@string/adicionaTime"
        android:textColor="@color/text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdicionaQtdTimes"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonAdicionaCampeonato"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/button"
        android:onClick="adicionaNovoCampeonato"
        android:text="@string/adicionaCampeonato"
        android:textColor="@color/text"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/insira_quantidade_times"
        android:textColor="@color/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCampeonato" />

    <EditText
        android:id="@+id/editTextQtdTimes"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/max_time"
        android:inputType="number|textPersonName"
        android:selectAllOnFocus="true"
        android:textColor="@color/text"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonAdicionaQtdTimes"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/button"
        android:onClick="quantidadeTimes"
        android:text="@string/ok"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextQtdTimes"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeCampeonato" />

    <ListView
        android:id="@+id/listViewTimes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdicionaCampeonato"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAdicionaTime" />

    <EditText
        android:id="@+id/editTextNomeCampeonato"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/adicioneNomeCampeonato"
        android:inputType="textPersonName"
        android:textAllCaps="false"
        android:textColor="@color/text"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>